tests/ui/mismatched_types/for-loop-in-vec-type-mismatchrs-50585.stderr
error[E0277]: the trait bound `std::ops::Range<{integer}>: const Iterator` is not satisfied
  --> $DIR/for-loop-in-vec-type-mismatchrs-50585.rs:3:27
   |
LL |     |y: Vec<[(); for x in 0..2 {}]>| {};
   |                           ^^^^ required by a bound introduced by this call
   |
note: trait `Iterator` is implemented but not `const`
  --> $SRC_DIR/core/src/iter/range.rs:LL:COL
   = note: required for `std::ops::Range<{integer}>` to implement `const IntoIterator`

error[E0277]: the trait bound `std::ops::Range<{integer}>: const Iterator` is not satisfied
  --> $DIR/for-loop-in-vec-type-mismatchrs-50585.rs:3:27
   |
LL |     |y: Vec<[(); for x in 0..2 {}]>| {};
   |                           ^^^^
   |
note: trait `Iterator` is implemented but not `const`
  --> $SRC_DIR/core/src/iter/range.rs:LL:COL

error[E0308]: mismatched types
  --> $DIR/for-loop-in-vec-type-mismatchrs-50585.rs:3:18
   |
LL |     |y: Vec<[(); for x in 0..2 {}]>| {};
   |                  ^^^^^^^^^^^^^^^^ expected `usize`, found `()`
   |
   = note: `for` loops evaluate to unit type `()`
help: consider returning a value here
   |
LL |     |y: Vec<[(); for x in 0..2 {} /* `usize` value */]>| {};
   |                                   +++++++++++++++++++

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
