tests/ui/mismatched_types/for-loop-in-vec-type-mismatchrs-50585.rs
// https://github.com/rust-lang/rust/issues/50585
fn main() {
    |y: Vec<[(); for x in 0..2 {}]>| {};
    //~^ ERROR mismatched types
    //~| ERROR  `std::ops::Range<{integer}>: const Iterator` is not satisfied
    //~| ERROR  `std::ops::Range<{integer}>: const Iterator` is not satisfied
}
